@@ -2,6 +2,7 @@ Revision history for perl distribution DBIx-TempDB
 
 0.02 Not Released
  - Fix depending on DBI
+ - Add create_database() sets DBIX_TEMP_DB_URL
 
 0.01 2015-09-17T19:12:10+0200
  - Can make temp database for postgresql
